--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
     <title>Portfolio TailwindCSS</title>
   </head>
   <body>
-    <h1 class="text-2xl text-blue-600">Hello World</h1>
+    <!-- Hero Section -->
+    <section id="hero" class="pt-32">
+      <div class="container">
+        <div class="flex flex-wrap">
+          <div class="w-full self-center px-4 lg:w-1/2">
+            <h1 class="text-base font-semibold text-primary md:text-xl">
+              Hello! Saya,
+              <span
+                class="block text-4xl text-primaryText font-bold my-2 lg:text-5xl"
+                >Mirza Fatur👋</span
+              >
+            </h1>
+            <h2 class="font-medium text-lg mb-2 text-primaryText lg:text-xl">
+              Designer & Developer
+            </h2>
+            <p class="text-secondaryText leading-relaxed mb-10">
+              Mari kita belajar menslicing design menjadi sebuah website
+              menggunakan TailwindCSS!
+            </p>
+
+            <a
+              href=""
+              class="text-base text-white font-semibold bg-primary py-4 px-8 rounded-full hover:shadow-lg hover:opacity-90 transition duration-300 ease-in-out"
+              >Hubungi Saya</a
+            >
+          </div>
+          <div class="w-full self-end px-4 lg:w-1/2">
+            <div class="mt-10 relative lg:mt-0 lg:right-0">
+              <img
+                src="./src/images/mirza.png"
+                alt="Mirza"
+                class="max-w-full mx-auto"
+              />
+              <span
+                class="absolute -z-10 -bottom-0 left-1/2 -translate-x-1/2 lg:scale-100"
+                ><svg
+                  width="400"
+                  height="400"
+                  viewBox="0 0 200 200"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill="#2563eb"
+                    d="M46.5,-33.1C60.9,-19,73.7,0.4,70.4,16.5C67.1,32.6,47.6,45.5,26.6,55.8C5.7,66,-16.7,73.7,-31.4,66.2C-46,58.7,-52.9,36.2,-57.8,13.5C-62.8,-9.2,-65.9,-32.1,-55.9,-45.2C-46,-58.3,-23,-61.7,-3.5,-58.9C16,-56.2,32.1,-47.3,46.5,-33.1Z"
+                    transform="translate(100 100) scale(1.3)"
+                  /></svg
+              ></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
